[ADD] 2.20 telephon-guide step12

--- a/part2/telephone-guide/src/index.css
+++ b/part2/telephone-guide/src/index.css
@@ -12,7 +12,13 @@ code {
     monospace;
 }
 
-.notification {
+.notification-success {
+  color: green;
+  border: 2px solid green;
+  background-color: lightgreen;
+}
+
+.notification-fail {
   color: red;
   border: 2px solid red;
   background-color: lightcoral;
